# HTTP-Sender

./: .travis.yml  Cargo.toml  Makefile  README.md  gzip_reader.rs  http_sender.rs  main.rs  zlib.rs
example/: main.rs
src/: chunk_reader.rs  gzip_reader.rs  http_sender.rs  zlib.rs
test/: main.rs
