[package]

name = "http_sender"
version = "1.0.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[dependencies.flate2]
git = "https://github.com/alexcrichton/flate2-rs.git"

[dependencies.time]
git = "http://github.com/rust-lang/time"

[lib]

name = "http_sender"
crate-type = ["dylib", "rlib"]

[[bin]]

name = "test"
path = "example/main.rs"